[package]
name = "mqtt-source"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Fluvio MQTT source connector"

[dependencies]
async-trait = { workspace = true }
futures = { version = "0.3", default-features = false}
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes", "tokio1"]}
serde = {workspace = true, features = ["derive"]}
serde_json = { workspace = true, features = ["preserve_order"] }
url = { version = "2.5", default-features = false }
thiserror = { version = "1.0", default-features = false }
uuid = { version = "1.11", features = ["v4"] }
rumqttc = { workspace = true, features = ["url", "websocket"] }
rustls = { workspace = true }
rustls-native-certs = { version = "0.7" }

fluvio = { workspace = true }
fluvio-connector-common = { workspace = true, features = ["derive"] }

[profile.release-lto]
inherits = "release"
lto = true


[workspace]
members = [
    "integration-tests",
    ".",
]

default-members = [
    "."
]

[workspace.dependencies]
anyhow = { version = "1.0.86" }
async-trait = { version = "0.1", default-features = false}
async-std = { version = "1.13",  default-features = false }
serde_json = { version = "1.0", default-features = false }
serde = {version = "1.0", default-features = false }
rumqttc = { version = "0.24" }
rustls = { version = "0.22" }

fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.12.0" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.14.0", features = ["derive"] }
fluvio-future = { version = "0.7.0", default-features = false }

# transitive version selection
bytes = { version = "1.8.0" }
