[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Integration tests for Fluvio MQTT source connector"

[dependencies]
log = { version = "0.4", default-features = false }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
bollard = { version = "0.14", default-features = false }
anyhow = { version = "1.0", default-features = false }
async-std = { version = "1.12", default-features = false, features = ["attributes", "tokio1"] }
futures-util = { version = "0.3", default-features = false }
rumqttc = { version = "0.20", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }
serde_json = { workspace = true }

fluvio = { workspace = true, default-features = false }
fluvio-future = { workspace = true, default-features = false, features = ["retry", "task", "net"] }
