[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Integration tests for Fluvio MQTT source connector"

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true, features = ["attributes", "tokio1"] }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
bollard = { version = "0.17", default-features = false }
futures-util = { version = "0.3", default-features = false }
rumqttc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }
serde_json = { workspace = true }

fluvio = { workspace = true }
fluvio-future = { workspace = true, default-features = false, features = ["retry", "task", "net"] }
